# AStarSemesterWork

./: CMakeLists.txt  Entity.cpp  Entity.h  Grid.cpp  Grid.h  Mapa.cpp  Mapa.h  Priority.cpp  Priority.h  README.md  Result.cpp  Result.h  main.cpp
datapub/: pub01.in
maps/: map01.in  map02.in
